Init heroContainer with opacity 0 to avoid flickering

--- a/src/pages/hero/hero.module.scss
+++ b/src/pages/hero/hero.module.scss
@@ -8,6 +8,7 @@
     height: 100%;
     width: 100%;
     padding: 0 5%;
+    opacity: 0;
 
     .heroHeader {
         line-height: 1.2;
